--- a/AlexNet_TensorFlow_HackerEarth_ProductCategory/ProductCategory_AlexNet_mini.ipynb
+++ b/AlexNet_TensorFlow_HackerEarth_ProductCategory/ProductCategory_AlexNet_mini.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import math\n",
     "import numpy as np\n",
-    "import h5py\n",
-    "import matplotlib.pyplot as plt\n",
+    "#import h5py\n",
+    "#import matplotlib.pyplot as plt\n",
     "import scipy\n",
     "#from PIL import Image\n",
     "from scipy import ndimage\n",
@@ -17,15 +17,15 @@
     "from tensorflow.python.framework import ops\n",
     "#from cnn_utils import *\n",
     "## Load Libraries\n",
-    "import os\n",
-    "import requests, zipfile, io\n",
-    "import tqdm\n",
+    "#import os\n",
+    "#import requests, zipfile, io\n",
+    "#import tqdm\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import cv2\n",
     "\n",
     "\n",
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "np.random.seed(1)"
    ]
   },
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "# this is the current directory where files will get downloaded\n",
-    "os.getcwd()"
+    "#os.getcwd()"
    ]
   },
   {
@@ -46,9 +46,9 @@
    "outputs": [],
    "source": [
     "# load data into platform\n",
-    "url = requests.get('https://he-s3.s3.amazonaws.com/media/hackathon/deep-learning-challenge-1/identify-the-objects/a0409a00-8-dataset_dp.zip')\n",
-    "data = zipfile.ZipFile(io.BytesIO(url.content))\n",
-    "data.extractall()"
+    "#url = requests.get('https://he-s3.s3.amazonaws.com/media/hackathon/deep-learning-challenge-1/identify-the-objects/a0409a00-8-dataset_dp.zip')\n",
+    "#data = zipfile.ZipFile(io.BytesIO(url.content))\n",
+    "#data.extractall()"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# check if the files have been download in current directory\n",
-    "os.listdir()"
+    "#os.listdir()"
    ]
   },
   {
@@ -360,19 +360,22 @@
     "    tf.set_random_seed(1)                              # so that your \"random\" numbers match ours\n",
     "        \n",
     "    ### START CODE HERE ### (approx. 2 lines of code)\n",
+    "    W1 = tf.get_variable(\"W1\", [4,4,3,1], initializer = tf.contrib.layers.xavier_initializer(seed = 0))\n",
+    "    \"\"\"\n",
     "    W1 = tf.get_variable(\"W1\", [4,4,3,96], initializer = tf.contrib.layers.xavier_initializer(seed = 0))\n",
     "    W2 = tf.get_variable(\"W2\", [5,5,96,256], initializer = tf.contrib.layers.xavier_initializer(seed = 0))\n",
     "    W3 = tf.get_variable(\"W3\", [3,3,256,384], initializer = tf.contrib.layers.xavier_initializer(seed = 0))\n",
     "    W4 = tf.get_variable(\"W4\", [3,3,384,384], initializer = tf.contrib.layers.xavier_initializer(seed = 0))\n",
-    "    W5 = tf.get_variable(\"W5\", [3,3,384,256], initializer = tf.contrib.layers.xavier_initializer(seed = 0))\n",
+    "    W5 = tf.get_variable(\"W5\", [3,3,384,256], initializer = tf.contrib.layers.xavier_initializer(seed = 0))\"\"\"\n",
     "    ### END CODE HERE ###\n",
     "\n",
-    "    parameters = {\"W1\": W1,\n",
-    "                  \"W2\": W2,\n",
-    "                  \"W3\": W3,\n",
-    "                  \"W4\": W4,\n",
-    "                  \"W5\": W5}\n",
+    "   # parameters = {\"W1\": W1,\n",
+    "   #               \"W2\": W2,\n",
+    "   #               \"W3\": W3,\n",
+    "   #               \"W4\": W4,\n",
+    "   #               \"W5\": W5}\n",
     "    \n",
+    "    parameters = {\"W1\": W1}\n",
     "    \n",
     "    return parameters"
    ]
@@ -401,10 +404,10 @@
     "    \n",
     "    # Retrieve the parameters from the dictionary \"parameters\" \n",
     "    W1 = parameters['W1']\n",
-    "    W2 = parameters['W2']\n",
+    "    \"\"\"W2 = parameters['W2']\n",
     "    W3 = parameters['W3']\n",
     "    W4 = parameters['W4']\n",
-    "    W5 = parameters['W5']\n",
+    "    W5 = parameters['W5']\"\"\"\n",
     "    \n",
     "    ### START CODE HERE ###\n",
     "    # CONV2D: stride of 1, padding 'VALID'\n",
@@ -412,6 +415,7 @@
     "    # ?? have not taken b1 parameter\n",
     "    # RELU\n",
     "    A1 = tf.nn.relu(Z1)\n",
+    "    \"\"\"\n",
     "    # MAXPOOL: window 3x3, sride 2, padding 'VALID'\n",
     "    P1 = tf.nn.max_pool(A1, ksize = [1,3,3,1], strides = [1,2,2,1], padding = 'VALID')\n",
     "    # CONV2D: filters W2, stride 1, padding 'SAME'\n",
@@ -441,7 +445,11 @@
     "    A7 = tf.contrib.layers.fully_connected(A6, 4096)    \n",
     "    # FULLY-CONNECTED without non-linear activation function (not not call softmax).\n",
     "    # 6 neurons in output layer. Hint: one of the arguments should be \"activation_fn=None\" \n",
-    "    Z8 = tf.contrib.layers.fully_connected(A7, 25, activation_fn=None)\n",
+    "    Z8 = tf.contrib.layers.fully_connected(A7, 6, activation_fn=None)\n",
+    "    \"\"\"\n",
+    "    # FLATTEN\n",
+    "    P1 = tf.contrib.layers.flatten(A1)\n",
+    "    Z8 = tf.contrib.layers.fully_connected(P1, 25, activation_fn=None)\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return Z8"
@@ -574,11 +582,11 @@
     "        \n",
     "        \n",
     "        # plot the cost\n",
-    "        plt.plot(np.squeeze(costs))\n",
-    "        plt.ylabel('cost')\n",
-    "        plt.xlabel('iterations (per tens)')\n",
-    "        plt.title(\"Learning rate =\" + str(learning_rate))\n",
-    "        plt.show()\n",
+    "        #plt.plot(np.squeeze(costs))\n",
+    "        #plt.ylabel('cost')\n",
+    "        #plt.xlabel('iterations (per tens)')\n",
+    "        #plt.title(\"Learning rate =\" + str(learning_rate))\n",
+    "        #plt.show()\n",
     "\n",
     "        # Calculate the correct predictions\n",
     "        predict_op = tf.argmax(Z8, 1)\n",
